@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="4"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="106"
+VERSION_BUILD="107"
 
 # $Log$
+#
+# BUILD : 1.4.0.107 (SVN)
+# BUGS  : 444,445
+# NOTES : Fixed segfault on topic set in Asuka, Fixed Asuka nick parser skipping some nicks
 #
 # BUILD : 1.4.0.106 (SVN)
 # BUGS  : 443
